# pyee

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTORS.md  CONTRIBUTORS.rst  DEVELOPMENT.md  DEVELOPMENT.rst  MANIFEST.in  Makefile  README.md  README.rst  conf.py  environment.yml  index.rst  justfile  mkdocs.yml  mypy.ini  package-lock.json  package.json  publish.sh  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_dev_py2.txt  requirements_dev_py35.txt  requirements_docs.txt  requirements_test.txt  requirements_tox.txt  setup.py  tox.ini
.github/workflows/: qa.yaml  release.yaml
docs/: Makefile  api.md  changelog.md  conf.py  index.md  index.rst  man.rst
example/: http_pubsub.py  producer_consumer.py
py3-test/: tests.py
pyee/: __init__.py  _asyncio.py  _base.py  _compat.py  _executor.py  _trio.py  _twisted.py  abc.py  asyncio.py  base.py  cls.py  errors.py  executor.py  handlers.py  namespace.py  table.py  trio.py  twisted.py  uplift.py  util.py
test/: testmatching.py  tests.py
tests/: conftest.py  test_async.py  test_asyncio.py  test_cls.py  test_deferred.py  test_executor.py  test_namespace.py  test_sync.py  test_trio.py  test_twisted.py  test_uplift.py  test_util.py
typings/twisted/python/: failure.pyi
